# TunaCounter

./: .gitignore  CMakeLists.txt  README.md  index.md
BackgroundSubtractor/: .gitignore  bksub.py  main.py  test.py
Classifier/: .gitignore  main.cpp  rebuild  run
Classifier/Train/: .gitignore  createsamples  safe_test  to_vec  train
Classifier/Train_new/: .gitignore  createsamples  inform  neg.bg  pos.vec  resize  to_vec  train  view
ImageProcessing/: main.py
OpticalFlow/: .gitignore  bk.py  main.py
Train/: .gitignore  createsamples  neg2.bg  process  resize  to_dat  train  view
